feat: added master user